--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@
 /Ejercicio5/build/
 /Ejercicio6/nbproject/private/
 /Ejercicio6/build/
+/Extra1/nbproject/private/
+/Extra2/nbproject/private/
+/Extra2/build/
+/Extra2_2/nbproject/private/
+/Extra1/build/
